# LightMCP

./: Dockerfile  README.md  payment.py  pyproject.toml  server.py
src/mcp_server/: server.py
