[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mcp-server"
version = "0.1.0"
description = "Bitcoin Lightning SMS Payments MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "sqlmodel",
    "sqlalchemy",
    "aiohttp>=3.9.0",
    "twilio>=7.0.0",
    "qrcode",
    "Pillow",
    "python-dotenv",
    "httpx",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

# Point to your server creation function
[tool.smithery]
server = "mcp_server.server:create_server"